--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -5,9 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	templates/error/404.html
-	
-	<br />
-	<a href="/view/index">Go Home</a>
+Welcome Template resolver...
 </body>
 </html>
