--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	templates/error/404.html
+	HTTP Status 500 – Internal Server Error
 	
 	<br />
 	<a href="/view/index">Go Home</a>
